# ChangeLog for net-im/centericq
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/centericq/Attic/ChangeLog,v 1.36 2004/02/17 13:26:53 dholm Exp $

  17 Feb 2004; David Holm <dholm@gentoo.org> centericq-4.9.9.ebuild:
  Added to ~ppc.

  09 Jan 2004; Jason Wever <weeve@gentoo.org> centericq-4.9.8.ebuild:
  Marked stable on sparc.

  09 Dec 2003; Chuck Short <zul@gentoo.org> centericq-4.9.9.ebuild:
  Added ~amd64 keyword, closes #35258.

*centericq-4.9.9 (01 Dec 2003)

  01 Dec 2003; Alex Veber <coronalvr@gentoo.org> centericq-4.9.8.ebuild,
  centericq-4.9.9.ebuild:
  version bump and a move to stable

  06 Nov 2003; Alex Veber <coronalvr@gentoo.org> centericq-4.9.8.ebuild:
  Changed the USE flag for fribidi from nls to bidi

  26 Oct 2003; Sven Blumenstein <bazik@gentoo.org> centericq-4.9.8.ebuild:
  Changed description as MSN support got removed (due to possible legal problems)

  26 Oct 2003; Sven Blumenstein <bazik@gentoo.org> centericq-4.9.8.ebuild:
  Added ~sparc

*centericq-4.9.8 (25 Oct 2003)

  25 Oct 2003; Alex Veber <coronalvr@gentoo.org> centericq-4.9.8.ebuild:
  bump

  15 Oct 2003; Alex Veber <coronalvr@gentoo.org> centericq-4.9.2.ebuild,
  centericq-4.9.4.ebuild, centericq-4.9.7.ebuild:
  move to stable and a cleanup.

*centericq-4.9.7 (04 Oct 2003)

  04 Oct 2003; Alex Veber <coronalvr@gentoo.org> centericq-4.9.7.ebuild:
  bump

  21 Sep 2003; Todd Sunderlin <todd@gentoo.org> centericq-4.9.6.ebuild:
  marked stable on sparc

  27 Aug 2003; Alex Veber <coronalvr@gentoo.org> centericq-4.9.6.ebuild:
  move to stable

*centericq-4.9.6 (23 Aug 2003)

  23 Aug 2003; Alex Veber <coronalvr@gentoo.org> centericq-4.9.6.ebuild:
  version bump.

*centericq-4.9.5-r1 (25 Jul 2003)

  25 Jul 2003; coronalvr <coronalvr@gentoo.org> centericq-4.9.5-r1.ebuild:
  added fribidi support

*centericq-4.9.5 (16 Jul 2003)

  16 Jul 2003; Nick Hadaway <raker@gentoo.org> centericq-4.9.5.ebuild,