@@ -1,6 +1,11 @@
 # ChangeLog for net-im/centericq
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/centericq/Attic/ChangeLog,v 1.36 2004/02/17 13:26:53 dholm Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/centericq/Attic/ChangeLog,v 1.37 2004/04/10 11:14:42 coronalvr Exp $
+
+*centericq-4.9.11 (10 Apr 2004)
+
+  10 Apr 2004; Alex Veber <coronalvr@gentoo.org> centericq-4.9.11.ebuild:
+  Version bump.
 
   17 Feb 2004; David Holm <dholm@gentoo.org> centericq-4.9.9.ebuild:
   Added to ~ppc.
